Closed Bug 1802216 Opened 3 years ago Closed 3 years ago

Scripts are not loaded on g2a.com

Categories

(Core :: DOM: Networking, defect, P2)

Firefox 109
Desktop
Unspecified
defect

Tracking

()

VERIFIED FIXED
109 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox107 --- unaffected
firefox108 --- unaffected
firefox109 --- verified

People

(Reporter: ksenia, Assigned: sefeng211)

References

(Regression, )

Details

(Keywords: regression, Whiteboard: [necko-triaged], [wptsync upstream])

Attachments

(1 file)

We've received a report in https://github.com/webcompat/web-bugs/issues/114271 where it's impossible to login on the site.

To reproduce:

  1. Visit https://www.g2a.com/ and click on "Sign in / Register" in the top right corner.
    Expected:
    Popup with sign in options is displayed

Actual:
Nothing happens

It appears that js files like https://static.g2a.com/_/horizon/p/_next/static/chunks/.. are not loaded, so most of the website functionality breaks.

The scripts load if I set browser.opaqueResponseBlocking to false.

From mozregression: https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=5ae27fe8ce37549b7ddbbf18108961d2bcfd927d&tochange=c1b9b1a0b6f01317ffda9cabda86e8482d08ee57

Hello Sean, would you be able to take a look at this, please?

Flags: needinfo?(sefeng)

Set release status flags based on info from the regressing bug 1800658

Thanks for the report! Looks like the work we did in bug 1797983 caused this regression. I am looking.

Flags: needinfo?(sefeng)
Regressions: 1797983
Assignee: nobody → sefeng
Regressed by: 1797983
No longer regressions: 1797983

We should only need to start nsCompressedAudioVideoImageDetector when
nsUnknownDecoder is not going to be started. Generally, they are not
designed to be working together.

Severity: -- → S3
Priority: -- → P2
Whiteboard: [necko-triaged]
Pushed by sefeng@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/48b2aade5452 Don't start nsCompressedAudioVideoImageDetector and nsUnknownDecoder in the same time r=farre,necko-reviewers,valentin
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/37298 for changes under testing/web-platform/tests
Whiteboard: [necko-triaged] → [necko-triaged], [wptsync upstream]
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 109 Branch
Upstream PR merged by moz-wptsync-bot
Duplicate of this bug: 1802771
Flags: qe-verify+

Reproduced the issue with Firefox 109.0a1 (2022-11-30) on Windows 10x64. Clicking on the Sign in / Register button does nothing.
The issue is verified fixed with Firefox 109.0b2 on Windows 10x64, macOS 11, and Ubuntu 20.04. The Sign in / Register correctly displays the drop-down menu.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: