netwerk/protocol/http/HttpBaseChannel.h
@@ -80,7 +80,7 @@ enum CacheDisposition : uint8_t {
   kCacheUnknown = 5
 };
 
-enum class OpaqueResponse { Block, Alllow, Sniff };
+enum class OpaqueResponse { Block, Alllow, SniffCompressed, Sniff };
 
 /*
  * This class is a partial implementation of nsIHttpChannel.  It contains code
@@ -632,8 +632,7 @@ class HttpBaseChannel : public nsHashPropertyBag,
 
   bool ShouldBlockOpaqueResponse() const;
 
-  OpaqueResponse PerformOpaqueResponseSafelistCheckBeforeSniff(
-      bool& aCompressedMediaAndImageDetectorStarted);
+  OpaqueResponse PerformOpaqueResponseSafelistCheckBeforeSniff();
 
   OpaqueResponse PerformOpaqueResponseSafelistCheckAfterSniff(
       const nsACString& aContentType, bool aNoSniff);
